--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -5,7 +5,7 @@ linuxuser:
     inhalt: |-
        02.08.2022
 
-        <ul><li>Enterürise Linux , verschiedene Themen</li>
+        <ul><li>Enterprise Linux , verschiedene Themen</li>
         <li>Raumschiff Enterprise Lt. Uhura ist tot</li>
         <li>Fedora soll für den User sehr einfach zu bedienen sein</li>
         <li>Manjaro im Vergleich zu Arch. Arch hat die schnelleren updates, manchmal hängts aber.</li>
