--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -5,7 +5,7 @@ linuxuser:
     inhalt: |-
       06.09.2022
 
-       <ul><li>Makerfaire Hannover der Micharl und der Jan haben dort einen Stand</li>
+       <ul><li>Makerfaire Hannover der Michael und der Jan haben dort einen Stand</li>
        <li>Froscon und die Fahrt mit dem 9 €-Ticket</li>
        <li>Simulierte Maus auf einem Arduino fährt im Kreis</li>
        <li>Sachen über die API vertwittern: Musik, Wetter</li>
