--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3.6'
 services:
   jekyll:
     image: jekyll/jekyll:latest
+    #command: bundle update
     command: jekyll serve --watch --incremental --open-url --livereload
     ports:
       - 4000:4000
