--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -1,21 +1,21 @@
 ---
 linuxuser:
   - meeting: Nächstes Treffen
-    tag: '04'
-    monat: '10'
+    tag: '08'
+    monat: '11'
     jahr: 2022
     ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 2
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '01'
+    tag: '18'
     monat: '11'
     jahr: 2022
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort: Hochschule Worms
+    strasse: Erenburgerstraße 19
     letztes: 1
-    start: '19:30 Uhr'
+    start: '15:00 Uhr'
   - meeting: Weitere Treffen
     tag: '06'
     monat: '12'
