--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -6,13 +6,13 @@ linuxuser:
 
        <ul><li>"Linux presntation day" in der HS Worms 18.11.2022</li>
        <li>Wer macht was am L.P.D</li>
-       <li>Natürlich wieder Alle Sorten von Containern</li>
+       <li>Natürlich wieder alle Sorten von Containern</li>
        <li>QGIS und Wetterradar vom Deutschen Wettterdienst <a href="https://github.com/dewomser/Wettervorhersage">Wetterradar</a></li>
-       <li>Metatsgs von Musik vertwittern <a href="https://github.com/dewomser/Tweet_and_toot_music_is_playing">tweet_and_toot_music</a></li>
+       <li>Metatags von Musik vertwittern <a href="https://github.com/dewomser/Tweet_and_toot_music_is_playing">tweet_and_toot_music</a></li>
        <li>Tesla - Linux aber gesperrt</li>
-       <li>Wir warenzu 6. das war nicht zu groß</li>
+       <li>Wir waren zu 6. Das war nicht zu groß</li>
        <li>Mainz 05 und Fengschui</li>
-       <li>Jekyll und die Tücken mit Dockecontainern. Versin steht in gem</li>
+       <li>Jekyll und die Tücken mit Dockecontainern. Version steht in gem</li>
        <li>Magento Event <a href="https://muench.dev/post/2022/10/mageunconf-2022/">mageunconf-2022</a></li></ul>
 
 
