Ups, noch ein Rechtschreibfehler

--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -12,7 +12,7 @@ linuxuser:
        <li>Tesla - Linux aber gesperrt</li>
        <li>Wir waren zu 6. Das war nicht zu groß</li>
        <li>Mainz 05 und Fengschui</li>
-       <li>Jekyll und die Tücken mit Dockecontainern. Version steht in gem</li>
+       <li>Jekyll und die Tücken mit Dockercontainern. Version steht in gem</li>
        <li>Magento Event <a href="https://muench.dev/post/2022/10/mageunconf-2022/">mageunconf-2022</a></li></ul>
 
 
