--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -4,7 +4,7 @@ linuxuser:
     tag: '08'
     monat: '11'
     jahr: 2022
-    ort: Hochschule Kartentest Worms
+    ort: Kartentest Worms
     strasse: Ludwigsplatz
     letztes: 2
     start: '19:30 Uhr'
