--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -4,9 +4,9 @@ linuxuser:
     tag: '08'
     monat: '11'
     jahr: 2022
-    ort: Hochschule test Worms
+    ort: Hochschule Worms
     strasse: Ludwigsplatz
-    letztes: 2
+    letztes: 0
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
     tag: '18'
@@ -22,5 +22,5 @@ linuxuser:
     jahr: 2022
     ort: Timescafe Worms
     strasse: Ludwigsplatz
-    letztes: 1
+    letztes: 2
     start: '19:30 Uhr'
