--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -13,7 +13,7 @@ linuxuser:
        <li>Frau Professor E. Heinemann</li>
        <li>Cyberabend in der Hochschule Worms</li>
        <li>Winzige WLAN-Platinen von WIZnet</li>
-       <li>Raspberrypi 4 als Computemodul</ul>
+       <li>Raspberrypi 4 als Computemodul</li></ul>
 
 
 
