Datumsvariablen in map.md anpepasst

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -4,7 +4,7 @@ linuxuser:
     tag: '18'
     monat: '11'
     jahr: 2022
-    ort: Hochschule Worms
+    ort: Hochschule Worms Gebäude N 1.Stock
     strasse: Erenburgerstraße 19
     letztes: 0
     start: '15:00 Uhr'
