Vorbereitung 2023 Fehler in Termine bereinigt vereinfacht LPD  Vornereitung Dezember Wolust

--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -1,5 +1,17 @@
 ---
 linuxuser:
+
+  - monat: 11a
+    inhalt: |-
+      18.11.2022
+
+       <ul><li>Wir waren am LPD an der Hochschule zu Gast</li>
+       <li>Schieberegister und Zeugs … Muss ich noch fragen was ich da schreiben soll</li></ul>
+
+
+
+
+
   - monat: 11
     inhalt: |-
       08.11.2022
