--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -1,24 +1,24 @@
 ---
 linuxuser:
   - meeting: Nächstes Treffen
-    tag: '18'
-    monat: '11'
-    jahr: 2022
-    ort: Hochschule Worms Gebäude N 1.Stock
-    strasse: Erenburgerstraße 19
-    letztes: 0
-    start: '15:00 Uhr'
-  - meeting: Weitere Treffen
     tag: '06'
     monat: '12'
     jahr: 2022
+    ort: Timescsfe Worms
+    strasse: Ludwigsolatz
+    letztes: 0
+    start: '19:30 Uhr'
+  - meeting: Weitere Treffen
+    tag: '03'
+    monat: '01'
+    jahr: 2023
     ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '03'
-    monat: '01'
+    tag: '07'
+    monat: '02'
     jahr: 2023
     ort: Timescafe Worms
     strasse: Ludwigsplatz
