Timescafe für map typo

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -4,8 +4,8 @@ linuxuser:
     tag: '06'
     monat: '12'
     jahr: 2022
-    ort: Timescsfe Worms
-    strasse: Ludwigsolatz
+    ort: Timescafe Worms
+    strasse: Ludwigsplatz
     letztes: 0
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
