--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -6,10 +6,10 @@ linuxuser:
       18.11.2022
 
        <ul><li>Wir waren am LPD an der Hochschule zu Gast</li>
-       <li>Schieberegister und Zeugs … Muss ich noch fragen was ich da schreiben soll</li></ul>
+       <li>Stefan sein Schieberegister und Wolust <a href="https://www.untergang.de/pi-more-schieberegister/index.pdf">Folien als PDF</a> externer Link</li>
+       <li>Weitere Vorträge … </li> </ul>
 
-
-
+    link: /_linkliste/wolust221118
 
 
   - monat: 11
