--- a/_data/review-2023.yaml
+++ b/_data/review-2023.yaml
@@ -4,5 +4,5 @@ linuxuser:
     inhalt: |-
       01.01.2023
 
-       <ul><li>Fröhliche Weihnachten und ein Gutes neues Jahr 2023 + !</li>
+       <ul><li>Fröhliche Weihnachten und ein Gutes neues Jahr 2023 !</li>
        </ul>
