Teilnehmer und Slides zum LPD

--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -6,8 +6,13 @@ linuxuser:
       18.11.2022
 
        <ul><li>Wir waren am LPD an der Hochschule zu Gast</li>
-       <li>Stefan sein Schieberegister und Wolust <a href="https://www.untergang.de/pi-more-schieberegister/index.pdf">Folien als PDF</a> externer Link</li>
-       <li>Weitere Vorträge … </li> </ul>
+       <li>Stefan sein Schieberegister und Wolust <a href="https://www.untergang.de/pi-more-schieberegister/index.pdf">pdrf</a></li>
+       <li>Tobias: OpenWrt - Die Entwicklung vom Routerbetriebssystem zur Linuxdistribution für Embedded Systems <a href="https://gitlab.rlp.net/fsl/l-p-d/-/blob/main/slides/lpd-2022-2_hswo_welz_openwrt.pdf">pdf</a></li>
+       <li>Klaus: Sicheres Linux / Videokonferenzlösung SCC <a href="https://gitlab.rlp.net/fsl/l-p-d/-/blob/main/slides/lpd-2022-2_hswo_ramst%C3%B6ck_sicheres-linux.pdf">pdf</a></li>
+       <li>Achim: Linux Notebook von Tuxedo mit OS-Virtualisierung / PiHole auf Raspberry Pi</li>
+       <li>Michael: Produktiver Einsatz von Manjaro Linux in der Softwareentwicklung ohne M$ Produkte</li>
+       <li>Michael+ Mike: SteamDeck - mehr als eine Spielkonsole: DIY 3D Scanner mit Photogrammetrie</li>
+       <li>Christian war verletzt und konnte deshalb nicht kommen-</li> </ul>
 
     link: /_linkliste/wolust221118
 
