--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -6,7 +6,7 @@ linuxuser:
       18.11.2022
 
        <ul><li>Wir waren am LPD an der Hochschule zu Gast</li>
-       <li>Stefan sein Schieberegister und Wolust <a href="https://www.untergang.de/pi-more-schieberegister/index.pdf">pdrf</a></li>
+       <li>Stefan sein Schieberegister und Wolust <a href="https://www.untergang.de/pi-more-schieberegister/index.pdf">pdf</a></li>
        <li>Tobias: OpenWrt - Die Entwicklung vom Routerbetriebssystem zur Linuxdistribution für Embedded Systems <a href="https://gitlab.rlp.net/fsl/l-p-d/-/blob/main/slides/lpd-2022-2_hswo_welz_openwrt.pdf">pdf</a></li>
        <li>Klaus: Sicheres Linux / Videokonferenzlösung SCC <a href="https://gitlab.rlp.net/fsl/l-p-d/-/blob/main/slides/lpd-2022-2_hswo_ramst%C3%B6ck_sicheres-linux.pdf">pdf</a></li>
        <li>Achim: Linux Notebook von Tuxedo mit OS-Virtualisierung / PiHole auf Raspberry Pi</li>
