--- a/_data/review-2023.yaml
+++ b/_data/review-2023.yaml
@@ -4,7 +4,12 @@ linuxuser:
     inhalt: |-
       03.01.2023
 
-       - Fröhliche Weihnachten und ein Gutes neues Jahr 2023 !
-       - wünscht der Wolust
-    link: /_linkliste/wolust210504
+       - Die Meisen Kamera mit Raspberrypi
+       - Die Geschichte von Wolust
+       - LateX  und der Atari-Editor von Uwe Lück
+       - 3D-Druck insbesondere mit Resin Harz
+       - Webseite von Wolust zu kompliziert ?
+       - E-Autos und Entwicklung von Batterie und Motor
+       - Wasserstoff
+
     editor: dewomser
