Satware als Wolust Standort eingfügt .Startseite auf Änderung hingewiesen. Typos

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -4,8 +4,8 @@ linuxuser:
     tag: '04'
     monat: '04'
     jahr: 2023
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort: Firma satware AG
+    strasse: Friedrich-Ebert-Straße 34
     letztes: 0
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
