--- a/_data/review-2023.yaml
+++ b/_data/review-2023.yaml
@@ -5,7 +5,7 @@ linuxuser:
       08.03.2023
 
        - Neu Webseite für Wolust . Wechsel von Jekyll nach Hugo ?
-       - VHS Engagment. 4 würden evtl mitmachen. das aind zu wenig. Entgültig gescheitert
+       - VHS Engagment. 4 würden evtl mitmachen. das sind zu wenig. Endgültig gescheitert
        - Linux Presentationday. Was ist mit den Terminen. Warten auf Antwort.
        - Tesla
        - Die API von Twitter und Mastodon
