--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -1,24 +1,24 @@
 ---
 linuxuser:
   - meeting: Nächstes Treffen
-    tag: '04'
-    monat: '04'
+    tag: '02'
+    monat: '05'
     jahr: 2023
-    ort: Firma satware AG
-    strasse: Friedrich-Ebert-Straße 34
+    ort: Timescafe Worms
+    strasse: Ludwigsplatz
     letztes: 0
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '02'
-    monat: '05'
+    tag: '06'
+    monat: '06'
     jahr: 2023
     ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '06'
-    monat: '06'
+    tag: '04'
+    monat: '07'
     jahr: 2023
     ort: Timescafe Worms
     strasse: Ludwigsplatz
