--- a/_data/review-2023.yaml
+++ b/_data/review-2023.yaml
@@ -9,10 +9,10 @@ linuxuser:
        - Wir hatten Redebedarf und im Timescafe geht das schlecht.
        - Wir brauchen wieder einen Raum zum Reden und Handson. VHS wieder aktivieren.
        - Der Linux-Presentation-day 23.1  Wir wollen mitmachen 
-       - Homepage restaurieren Jekyll evtl mit eigenem Build auf Github
+       - Homepage restaurieren Jekyll evtl. mit eigenem Build auf Github
        - Open Bike Sensor und Makerlab  eine Idee von Michael
        - Ist Matrix der richtige Chat für uns? Stammtischtermine und Rückmeldung
-       - Pizza was gut.
+       - Pizza war gut.
 
     editor: dewomser
 
