--- a/_data/review-2023.yaml
+++ b/_data/review-2023.yaml
@@ -5,16 +5,16 @@ linuxuser:
     inhalt: |-
       26.05.2023
 
-       - Außerordentlicheer Stammtisch an der Hochschule Worms
+       - Außerordentlicher Stammtisch an der Hochschule Worms
        - Linux Presentationday in Zusammenarbeit mit der HS-Worms
        - Mitgebrachte Projekte:
        - Modifizierte Ampelanlage mit Raspberry Pi. Dankward hat das mitgebracht
-       - Multimeter mit Drangebastelter serieller Schnittstelle
-       - Laptop mit Wasserkühlung. As läuft stabele Diffussion
-       - 2 Laptops Mac und Linux. Grafisches Design ist kaum unterscheidbar
+       - Multimeter mit drangebastelter serieller Schnittstelle von Stefan
+       - Laptop mit Wasserkühlung. Es läuft Stable Diffusion
+       - 2 Laptops mit Mac und Linux. Desktop Layout ist kaum unterscheidbar
        - Vorträge:
-       - Klaus hält ein Vortrag. WSL – Windows Subsystem for Linux
-       - Stefan erzählt was über APIs. Schwerpunkt #Worms,Wetter,Medien
+       - Klaus hält einen Vortrag. WSL – Windows Subsystem for Linux
+       - Stefan erzählt was über APIs. Schwerpunkt Worms,Wetter,Medien
     link: /_linkliste/wolust230526
     editor: dewomser
 
