--- a/_data/review-2023.yaml
+++ b/_data/review-2023.yaml
@@ -6,7 +6,7 @@ linuxuser:
       24.11.2023
        - Linux Presentation Day 23-2 Nachmittag an der Hochschule Worms
        - Bash ganz einfach Stefan [Folie](https://github.com/dewomser/BASH-LPD2023/)
-       - Micropython und Raspbery pico Dankward
+       - Micropython und Raspbery pico Dankward [Folie](../../../../../../../dankward_lpd23_2_vortrag)
        - Linux und Android auf dem Handy Klaus
        - Distributionen und Lizenzen Prof Thielen
 
