Respiration Aspiration Typo

--- a/_data/review-2023.yaml
+++ b/_data/review-2023.yaml
@@ -11,7 +11,7 @@ linuxuser:
        - Übersetzen mit Lizenz und mit Firefox
        - Nextcloud  Analytics und OCS API
        - X.org oder Wayland . Sceensaver Spectacle geht mit beiden
-       - Impfen und Respiration Venen und Aterien
+       - Impfen und Aspiration Venen und Aterien
        - Ukrainekrieg. Es wird viel gelogen
 
     editor: dewomser
