--- a/_data/review-2024.yaml
+++ b/_data/review-2024.yaml
@@ -5,10 +5,19 @@ linuxuser:
 
   - monat: 01
     inhalt: |-
-      03.01.2024
+      02.01.2024
 
        - Schönes neues Jahr,
        - und einen guten Rutsch !
 
-    editor: dewomser
+       - Magenta  Werkzeug Magerun
+       - Firefox Extensions
+       - Firefox Container
+       - AI macht Bilder ,Text, Code
+       - Linux-Tage Chemnitz
+       - git, gitea, codeberg, github.
+       - LPD24/1  Wer und wie kümmert sich
+       - Tiktok,Twitch und Gameing Jugendliche mögen kein Linux
+       - Chuck Norris und sudo -u chucknorris kill -9 1
 
+    editor: dewomser
