wolust Januar 2024 nach dem merge

--- a/_data/review-2024.yaml
+++ b/_data/review-2024.yaml
@@ -11,8 +11,8 @@ linuxuser:
        - und einen guten Rutsch !
 
        - Magenta  Werkzeug Magerun
-       - Firefox Extensions
-       - Firefox Container
+       - Firefox Extensions Beispiel open-with und ublock-origin
+       - Firefox Container Beispiel Facebook
        - AI macht Bilder ,Text, Code
        - Linux-Tage Chemnitz
        - git, gitea, codeberg, github.
